Compiler/tests/typing/bad/testfile-while-1.rs
fn main() { while 42 { } }
